--- a/web/admin/class-builder.html
+++ b/web/admin/class-builder.html
@@ -7,40 +7,40 @@
 <div class="alert alert-danger"><strong>Error:</strong> {{ .Error }}</div>
 {{ end }}
 <form method="post">
-  <div class="row g-3">
-    <div class="col-lg-3 mb-3">
+  <div class="row">
+    <div class="col-lg-3">
       <label for="name">Class Name <em class="text-muted">Typically plural</em></label>
-      <input type="text" id="name" name="name" class="form-control" value="{{ .Class.Name }}">
+      <input type="text" id="name" name="name" class="form-control mb-4" value="{{ .Class.Name }}" required>
     </div>
-    <div class="col-lg-3 mb-3">
+    <div class="col-lg-3">
       <label for="slug">Slug</label>
-      <input type="text" id="slug" name="slug" class="form-control" pattern="[a-z][a-z0-9_]+" value="{{ .Class.Slug }}">
+      <input type="text" id="slug" name="slug" class="form-control" pattern="[a-z][a-z0-9_]+" title="Must be lowercase alphanumeric; underscores allowed" value="{{ .Class.Slug }}" required>
     </div>
-    <div class="col-lg-3 mb-3">
+    <div class="col-lg-3">
       <label for="singular_name">Singular Name</label>
-      <input type="text" id="singular_name" name="singular_name" class="form-control" value="{{ .Class.SingularName }}">
+      <input type="text" id="singular_name" name="singular_name" class="form-control mb-4" value="{{ .Class.SingularName }}">
     </div>
-    <div class="col-lg-3 mb-3">
+    <div class="col-lg-3">
       <label for="menu_label">Menu Label</label>
-      <input type="text" id="menu_label" name="menu_label" class="form-control" value="{{ .Class.MenuLabel }}">
+      <input type="text" id="menu_label" name="menu_label" class="form-control mb-4" value="{{ .Class.MenuLabel }}">
     </div>
   </div>
-  <div class="row g-3">
-    <div class="col-lg-3 mb-3">
+  <div class="row">
+    <div class="col-lg-3">
       <label for="add_item_label">Add Item Label</label>
-      <input type="text" id="add_item_label" name="add_item_label" class="form-control" value="{{ .Class.AddItemLabel }}">
+      <input type="text" id="add_item_label" name="add_item_label" class="form-control mb-4" value="{{ .Class.AddItemLabel }}">
     </div>
-    <div class="col-lg-3 mb-3">
+    <div class="col-lg-3">
       <label for="new_item_label">New Item Label</label>
-      <input type="text" id="new_item_label" name="new_item_label" class="form-control" value="{{ .Class.NewItemLabel }}">
+      <input type="text" id="new_item_label" name="new_item_label" class="form-control mb-4" value="{{ .Class.NewItemLabel }}">
     </div>
-    <div class="col-lg-3 mb-3">
+    <div class="col-lg-3">
       <label for="edit_item_label">Edit Item Label</label>
-      <input type="text" id="edit_item_label" name="edit_item_label" class="form-control" value="{{ .Class.EditItemLabel }}">
+      <input type="text" id="edit_item_label" name="edit_item_label" class="form-control mb-4" value="{{ .Class.EditItemLabel }}">
     </div>
-    <div class="col-lg-3 mb-3">
+    <div class="col-lg-3">
       <label for="view_item_label">View Item Label</label>
-      <input type="text" id="view_item_label" name="view_item_label" class="form-control" value="{{ .Class.ViewItemLabel }}">
+      <input type="text" id="view_item_label" name="view_item_label" class="form-control mb-4" value="{{ .Class.ViewItemLabel }}">
     </div>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
