--- a/web/admin/class-field-builder.html
+++ b/web/admin/class-field-builder.html
@@ -21,7 +21,7 @@
 {{ end }}
 
 {{ define "content" }}
-<h1 class="fs-2 mb-3">{{ .Class.Name }} Fields</h1>
+<h1 class="fs-2 mb-4">{{ .Class.Name }} Fields</h1>
 <form id="field-form" method="post" action="/admin/classes/{{ .Class.Slug }}/fields">
   <ul id="class-fields" class="list-unstyled d-grid gap-3 class-fields"><!-- No spaces so :empty triggers --></ul>
   <button type="submit" class="btn btn-primary">Submit</button>
@@ -52,70 +52,70 @@
     </div>
   </template>
   <template id="common-template">
-    <div class="row g-3">
+    <div class="row">
       <div class="col-lg-6">
         <label for="${id}-label">Field Label</label>
-        <input type="text" id="${id}-label" class="form-control mb-3" name="label" value="" required>
+        <input type="text" id="${id}-label" class="form-control mb-4" name="label" value="" required>
       </div>
       <div class="col-lg-6">
         <label for="${id}-name">Field Name</label>
-        <input type="text" id="${id}-name" class="form-control mb-3" name="name" pattern="[a-z][a-z0-9_]+" title="Must be lowercase alphanumeric; underscores allowed" value="" required>
+        <input type="text" id="${id}-name" class="form-control mb-4" name="name" pattern="[a-z][a-z0-9_]+" title="Must be lowercase alphanumeric; underscores allowed" value="" required>
       </div>
     </div>
   </template>
   <template id="date-template">
-    <div class="row g-3">
+    <div class="row">
       <div class="col-lg-3">
         <label for="${id}-min">Min Date</label>
-        <input type="date" id="${id}-min" class="form-control mb-3" name="min" value="">
+        <input type="date" id="${id}-min" class="form-control mb-4" name="min" value="">
       </div>
       <div class="col-lg-3">
         <label for="${id}-max">Max Date</label>
-        <input type="date" id="${id}-max" class="form-control mb-3" name="max" value="">
+        <input type="date" id="${id}-max" class="form-control mb-4" name="max" value="">
       </div>
       <div class="col-lg-3">
         <label for="${id}-step">Step (days)</label>
-        <input type="number" id="${id}-step" class="form-control mb-3" name="step" min="0" value="">
+        <input type="number" id="${id}-step" class="form-control mb-4" name="step" min="0" value="">
       </div>
     </div>
   </template>
   <template id="time-template">
-    <div class="row g-3">
+    <div class="row">
       <div class="col-lg-3">
         <label for="${id}-min">Min Time</label>
-        <input type="time" id="${id}-min" class="form-control mb-3" name="min" value="">
+        <input type="time" id="${id}-min" class="form-control mb-4" name="min" value="">
       </div>
       <div class="col-lg-3">
         <label for="${id}-max">Max Time</label>
-        <input type="time" id="${id}-max" class="form-control mb-3" name="max" value="">
+        <input type="time" id="${id}-max" class="form-control mb-4" name="max" value="">
       </div>
       <div class="col-lg-3">
         <label for="${id}-step">Step (seconds)</label>
-        <input type="number" id="${id}-step" class="form-control mb-3" name="step" min="0" value="">
+        <input type="number" id="${id}-step" class="form-control mb-4" name="step" min="0" value="">
       </div>
     </div>
   </template>
   <template id="number-template">
-    <div class="row g-3">
+    <div class="row">
       <div class="col-lg-3">
         <label for="${id}-min">Min Number</label>
-        <input type="number" id="${id}-min" class="form-control mb-3" name="min" value="">
+        <input type="number" id="${id}-min" class="form-control mb-4" name="min" value="">
       </div>
       <div class="col-lg-3">
         <label for="${id}-max">Max Number</label>
-        <input type="number" id="${id}-max" class="form-control mb-3" name="max" value="">
+        <input type="number" id="${id}-max" class="form-control mb-4" name="max" value="">
       </div>
       <div class="col-lg-3">
         <label for="${id}-step">Step</label>
-        <input type="number" id="${id}-step" class="form-control mb-3" name="step" min="0" value="">
+        <input type="number" id="${id}-step" class="form-control mb-4" name="step" min="0" value="">
       </div>
     </div>
   </template>
   <template id="select-template">
-    <div class="row g-3">
+    <div class="row">
       <div class="col-lg-12">
         <label for="${id}-options">Options (one per line, key | value or just value)</label>
-        <textarea id="${id}-options" class="form-control mb-3" name="options" style="height: 10em;"></textarea>
+        <textarea id="${id}-options" class="form-control mb-4" name="options" style="height: 10em;"></textarea>
       </div>
     </div>
   </template>
