--- a/web/admin/document-builder.html
+++ b/web/admin/document-builder.html
@@ -7,19 +7,19 @@
 <div class="alert alert-danger"><strong>Error:</strong> {{ .Error }}</div>
 {{ end }}
 <form method="post">
-  <div class="row g-3">
-    <div class="col-lg-12 mb-3">
+  <div class="row">
+    <div class="col-lg-12">
       <label for="document-title">Title</label>
-      <input type="text" id="document-title" name="title" class="form-control" value="{{ .Document.Title }}">
+      <input type="text" id="document-title" name="title" class="form-control mb-4" value="{{ .Document.Title }}" required>
     </div>
-    <div class="col-lg-12 mb-3">
+    <div class="col-lg-12">
       <label for="document-slug">Slug</label>
-      <input type="text" id="document-slug" name="slug" class="form-control" pattern="[a-z][a-z0-9_]+" value="{{ .Document.Slug }}">
+      <input type="text" id="document-slug" name="slug" class="form-control mb-4" pattern="[a-z][a-z0-9_]+" title="Must be lowercase alphanumeric; underscores allowed" value="{{ .Document.Slug }}" required>
     </div>
   </div>
-  <div class="row g-3">
-    {{ range .Class.Fields }}
-    <div class="col-lg-12 mb-3">
+  {{ range .Class.Fields }}
+  <div class="row">
+    <div class="col-lg-12">
       <label for="{{ .Name }}">{{ .Label }}</label>
       {{ if eq .Type "text" }}
         <input type="text" id="{{ .Name }}" name="{{ .Name }}" class="form-control" value="{{ index $.Document.Values .Name }}">
@@ -35,8 +35,8 @@
         <textarea id="{{ .Name }}" name="{{ .Name }}" class="form-control">{{ index $.Document.Values .Name }}</textarea>
       {{ end }}
     </div>
-    {{ end }}
   </div>
+  {{ end }}
   <input type="hidden" name="class_id" value="{{ .Class.Id.Hex }}">
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
