Adding format field to time/date fields

--- a/web/admin/class-field-builder.html
+++ b/web/admin/class-field-builder.html
@@ -77,6 +77,10 @@
         <label for="${id}-step">Step (days)</label>
         <input type="number" id="${id}-step" class="form-control mb-4" name="step" min="0" value="">
       </div>
+      <div class="col-lg-3">
+        <label for="${id}-format">Format</label>
+        <input type="text" id="${id}-format" class="form-control mb-4" name="format" value="">
+      </div>
     </div>
   </template>
   <template id="time-template">
@@ -93,6 +97,10 @@
         <label for="${id}-step">Step (seconds)</label>
         <input type="number" id="${id}-step" class="form-control mb-4" name="step" min="0" value="">
       </div>
+      <div class="col-lg-3">
+        <label for="${id}-format">Format</label>
+        <input type="text" id="${id}-format" class="form-control mb-4" name="format" value="">
+      </div>
     </div>
   </template>
   <template id="number-template">
@@ -108,6 +116,10 @@
       <div class="col-lg-3">
         <label for="${id}-step">Step</label>
         <input type="number" id="${id}-step" class="form-control mb-4" name="step" min="0" value="">
+      </div>
+      <div class="col-lg-3">
+        <label for="${id}-format">Format</label>
+        <input type="text" id="${id}-format" class="form-control mb-4" name="format" value="">
       </div>
     </div>
   </template>
