Removing ViewItemLabel from Class

--- a/web/admin/document-list.html
+++ b/web/admin/document-list.html
@@ -2,7 +2,7 @@
 {{ end }}
 
 {{ define "content" }}
-<h1 class="fs-2 mb-3">{{ .Class.ViewItemLabel }}</h1>
+<h1 class="fs-2 mb-3">{{ .Class.Names }}</h1>
 <p>Total documents: {{ .List.Total }}</p>
 {{ end }}
 
