Adding formatting help for dates and times

--- a/web/admin/class-field-builder.html
+++ b/web/admin/class-field-builder.html
@@ -78,7 +78,7 @@
         <input type="number" id="${id}-step" class="form-control mb-4" name="step" min="0" value="">
       </div>
       <div class="col-lg-3">
-        <label for="${id}-format">Format</label>
+        <label for="${id}-format">Format (Jan 2, 2006 3:04 pm)</label>
         <input type="text" id="${id}-format" class="form-control mb-4" name="format" value="">
       </div>
     </div>
@@ -98,7 +98,7 @@
         <input type="number" id="${id}-step" class="form-control mb-4" name="step" min="0" value="">
       </div>
       <div class="col-lg-3">
-        <label for="${id}-format">Format</label>
+        <label for="${id}-format">Format (3:04 pm)</label>
         <input type="text" id="${id}-format" class="form-control mb-4" name="format" value="">
       </div>
     </div>
